--- a/assets/style.css
+++ b/assets/style.css
@@ -95,21 +95,46 @@ header nav ul li a:hover {
 
 .bio {
     width: 40%;
-    float: left;
+    float: right;
     text-align: left;
     flex-wrap: wrap;
-    padding: 10px 10px;
+    padding: 10px 15px;
+    line-height: 1.4em;
 
 }
 
+.about-me {
+    padding-left: 70px;
+}
 .about-me img {
     border-radius: 75%;
     width: 30%;
-    padding: 10px;
     max-width: 100%;
-    border: 2px solid #808080;
+    border: 3px solid #808080;
+    box-shadow: lightgray;
     position: relative;
-    
+}
+
+/* My work */
+
+
+/* contact me */
+
+.contact-one {
+    background-color: gray;
+}
+
+section h2 {
+    text-align: center;
+}
+section div ul {
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+    border-bottom: 1px black;
 }
 
 /* Footer */
@@ -122,16 +147,6 @@ footer {
     top: 0;
     flex-wrap: wrap;
     padding: 15px;
-}
-
-/* contact me */
-section div ul {
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
 }
 
 /* MEDIA QUERIES FOR SMALLER SCREENS */
