added hover to images

--- a/assets/style.css
+++ b/assets/style.css
@@ -127,6 +127,11 @@ header nav ul li a:hover {
     flex: 1 0 0;
     padding: 10px;
     text-align: center;
+    opacity: .5;
+}
+
+.work-big:hover {
+    opacity: 1.0;
 }
 
 .work-normal {
@@ -134,6 +139,16 @@ header nav ul li a:hover {
   padding: 10px;
   text-align: center;
   justify-content: space-between;
+  opacity: .5;
+}
+
+.work-normal:hover {
+    opacity: 1.0;
+
+}
+
+.border {
+    border: 2px solid #000
 }
 
 
