--- a/assets/style.css
+++ b/assets/style.css
@@ -62,7 +62,7 @@ header nav ul li a:hover {
 
 /* Hero */
 .hero {
-    background-image: url("/assets/images/background-image.png");
+    background-image: url("../assets/images/background-image.png");
     background-size: cover;
     background-position: 25% 75%;
     padding: 50px;
@@ -158,6 +158,7 @@ header nav ul li a:hover {
 } */
 
 /* My Work New */
+/* coded with help of tutor */
 
 .work-pics {
     display: flex;
@@ -166,9 +167,8 @@ header nav ul li a:hover {
 }
 
 .my-work {
-    border: 5px solid rgb(16, 43, 219);
-    background-color: white;
-    color: gray;
+    border: 3px solid rgb(49, 65, 166);
+    color: black;
     min-height: 150px;
     max-height: 150px;
     flex-basis: calc(50% - 1em);
@@ -189,38 +189,44 @@ header nav ul li a:hover {
 }
 
 .my-work:hover {
-    background-color: darkgrey;
+    background-color: lightgray;
+    
 }
 
 .my-work div {
-    background-color: lightsteelblue;
-    padding: 10px 5px;
+    background-color: lightblue;
+    padding: 5px 5px;
 }
 
 .my-work h3 {
-    font-size: 25px;
+    font-size: 23px;
 }
 
 /* my work images */
 
 .run-buddy {
     background-image: url("../assets/images/RunBuddy-project.png");
+    background-size: auto 153%;
 }
 
 .placeholder-1 {
     background-image: url("../assets/images/placeholder1.png");
+    background-size: auto 120%;
 }
 
 .placeholder-2 {
     background-image: url("../assets/images/placeholder2.png");
+    background-size: auto 120%;
 }
 
 .placeholder-3 {
     background-image: url("../assets/images/placeholder3.png") ;
+    background-size: auto 120%;
 }
 
 .placeholder-4 {
     background-image: url("../assets/images/placeholder4.png");
+    background-size: auto 120%;
 }
 
 /* move text on work pictures */
