--- a/assets/style.css
+++ b/assets/style.css
@@ -224,9 +224,9 @@ header nav ul li a:hover {
 
 section div ul {
     padding: 20px;
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     list-style: none;
     border-bottom: 1px black;
@@ -256,11 +256,18 @@ footer {
       text-align: center;
     }
 
+@media screen and (max-width: 920px) {
+    .about-me img {
+        width: 200px;
+        height: 200px;
+    }
+
+    .bio {
+        font-size: 12px;
+    }
+
 @media screen and (max-width: 480px) {
     .about-me img {
-        width: 100%;
-        height: 100%;
+        width: 100px;
+        height: 100px;
     }
-}
-}
-
