--- a/assets/style.css
+++ b/assets/style.css
@@ -62,7 +62,7 @@ header nav ul li a:hover {
 
 /* Hero */
 .hero {
-    background-image: url("../assets/images/background-image.png");
+    background-image: url("../assets/images/Background-image.png");
     background-size: cover;
     background-position: 25% 75%;
     padding: 50px;
@@ -248,3 +248,4 @@ footer {
         width: 100px;
         height: 100px;
     }
+}
