--- a/assets/style.css
+++ b/assets/style.css
@@ -121,6 +121,17 @@ header nav ul li a:hover {
     position: relative;
 }
 
+/* Christmas */
+
+.Christmas {
+    display: block;
+    width: 100px;
+    height: 50px;
+    margin: 0 auto;
+    background-color: #777;
+    
+}
+
 /* My Work New */
 /* coded with help of tutor */
 
